--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "rtp-live",
+  "name": "bonus-new-member-100",
   "theme": "ui",
   "version": "1.1.0",
-  "description": "RTP LIVE SLOT PALING AKURAT",
+  "description": "Slot Bonus New Member 100 Di Awal – Situs slot online terbaik 2022 sekaligus agen judi online resmi di Indonesia menyediakan permainan judi online deposit uang asli 24 jam. Website dengan tema berwarna ungu pernah menjadi situs judi slot terbaik dan terpercaya no 1 di Indonesia. Dan hingga sekarang, masih menjadi bandar slot online terpercaya yang selalu membayar semua kemenangan para membernya.",
   "keywords": [
-    "RTP",
-    "RTP Slot",
-    "RTP LIVE",
-    "Bocoran RTP",
-    "Info RTP"
+    "slot bonus new member 100 di awal to 7x",
+    "slot bonus new member 100 di awal to 10x",
+    "bonus new member 100 to 10x",
+    "new member 100 to 3x",
+    "bonus new member 100 to 7x"
   ],
-  "repository": "https://github.com/Alex-MKRV/rtp-live",
+  "repository": "https://github.com/PESULAPMERAH/PESEULAPMERAHGACOR",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
