--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bonus-new-member-100",
+  "name": "slot-bonus-new-member-100-di-awal-gacor-2022",
   "theme": "ui",
   "version": "1.1.1",
   "description": "Slot Bonus New Member 100 Di Awal – Situs slot online terbaik 2022 sekaligus agen judi online resmi di Indonesia menyediakan permainan judi online deposit uang asli 24 jam. Website dengan tema berwarna ungu pernah menjadi situs judi slot terbaik dan terpercaya no 1 di Indonesia. Dan hingga sekarang, masih menjadi bandar slot online terpercaya yang selalu membayar semua kemenangan para membernya.",
